tests/baselines/reference/parserGreaterThanTokenAmbiguity9.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity9.ts (1 errors) ====
    1 >>
    > 2;
    ~
!!! parserGreaterThanTokenAmbiguity9.ts(2,1): error TS1109: Expression expected.